@@ -1,3 +1,8 @@
+2002-01-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* mapedit/shapeedit.cc: Show shapes in 'Equipment' window, and
+	also allow DND onto the shapes.
+
 2002-01-19  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/shapeedit.cc:  Shape-info editing seems to (at least
